cityFood.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

body {
    max-width: 1450px;
    margin: auto;
}

/* header */
header {
    margin-top: 1.5rem;
    padding: 0 6rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.left-header {
    display: flex;
    align-items: center;
    gap: 1.5rem;
    width: 75%;

}

.zomato-logo {
    width: 175px;
    height: 32px;
}

.search-locality {
    display: flex;
    align-items: center;
    gap: 1rem;
    height: 50px;
    width: 75%;
    border: 1px solid transparent;
    border-radius: 8px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
}

.location {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 60%;
}

.location-container {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.location-container img {
    width: 25px;
}

.down-arrow img {
    width: 15px;
    cursor: pointer;
    transition: transform 0.1s ease;
}

.vertical-line {
    height: 25px;
}

.sub-header-sm {
    display: none;
}

.dish-sm {
    display: none;
}

.dish-container {
    padding-right: 8rem;
    display: flex;
    gap: 1rem;
}

.dish-container img {
    width: 25px;
}

.dish-container input {
    border: none;
    width: 250px;
    font-size: 1.2rem;
}

.dish-container input:focus {
    outline: none;
    border: none;
}

.dish-container input::placeholder {
    font-size: 0.9rem;
}

.right-header {
    display: flex;
    justify-content: space-around;
    width: 15%;
    cursor: pointer;
}

.right-header p {
    font-size: 1.2rem;
    color: rgb(105, 105, 105);
}

.right-header p:hover {
    color: black;
}

.detect-current-location {
    border: 4px solid black;
    display: flex;
    align-items: start;
    gap: 0.5rem;
    width: 30%;
    padding: 15px 30px;
    margin: 15px 0 0 295px;
    height: 80px;
    cursor: pointer;
    border-radius: 8px;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
    background-color: white;
    visibility: hidden;
}

.detect-current-location img {
    width: 25px;
}

.detect-current-location-text {
    color: red;
    font-size: 1.2rem;
}

.right-header-sm {
    display: none;
}

.right-header-sm img {
    width: 2.5rem;
    display: none;
}

/* bread-cumb */
.bread-crumb {
    margin-top: -70px;
    padding: 0 6rem;
}

.bread-cumb-container p {
    color: rgb(130, 130, 130)
}

.bread-cumb-container p a {
    color: black;
}

.bread-cumb-container p a:hover {
    color: red;
}

/* categories */
.categories {
    padding: 0 6rem 3rem;
    margin-top: 1.5rem;
    border-bottom: 1px solid rgb(236, 231, 231);
}

.categories-container {
    display: flex;
    gap: 1rem;
}

.delivery,
.dining-out,
.night-life {
    display: flex;
    align-items: center;
    height: 100px;
    width: 18%;
    padding-left: 25px;
    gap: 15px;
    margin-bottom: -3rem;
    cursor: pointer;
    color: rgb(105, 105, 105);
}

.delivery {
    border-bottom: 2px solid rgb(253, 74, 74);
}

.delivery p,
.dining-out p,
.night-life p {
    font-size: 1.2rem;
}

.delivery img,
.dining-out img,
.night-life img {
    width: 55px;
    padding: 0.2rem;
    background-color: rgb(248, 248, 248);
    border-radius: 12px;
}

.delivery img {
    background-color: yellow;
}

/* filters */
.filters {
    padding: 1.8rem 6rem;
    position: sticky;
    top: 80px;
    z-index: 2;
    background-color: white;

}

.filter-container {
    display: flex;
}

.filter-box,
.rating-box,
.pure-veg-box,
.cuisines-box {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;
    width: auto;
    border-radius: 9px;
    height: 35px;
    cursor: pointer;
    border: 1px solid rgb(207, 207, 207);
    color: rgb(156, 156, 156);
    background-color: rgb(255, 255, 255);
    box-shadow: rgba(54, 54, 54, 0.06) 0px 1px 2px;
    padding: 0.8rem;
}

.filter-box img {
    width: 25px;
}

.cuisines-box img {
    width: 16px;
}

/* all filters */
.all-filters {
    position: fixed;
    top: 2rem;
    left: 15rem;
    width: 60%;
    margin: auto;
    height: 580px;
    border-radius: 9px;
    z-index: 2;
    background-color: white;
    border: 4px solid black;
    display: none;
}


.all-filter-container {
    display: flex;
    flex-direction: column;
}

.all-filter-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 1rem;
}

.all-filter-header p {
    font-size: 1.5rem;
}

.all-filter-header img {
    width: 25px;
    cursor: pointer;
}

.filter-container {
    display: flex;
    gap: 1rem;
}

.filter-container-left-section {
    display: flex;
    flex-direction: column;
}

.filter-2,
.filter-3,
.filter-4,
.filter-5 {
    background-color: rgb(248, 248, 248);
}



.filter-1 {
    width: 10rem;
    padding: 1rem;
    cursor: pointer;
    height: 80px;
    color: rgb(79, 79, 79);
}

.filter-1 h3 {
    font-weight: 300;
}

.filter-1 p {
    color: red;
}

.filter-container-right-section {

    width: 60rem;

}

.filter-1-options {
    display: block;
}

.filter-1-options div {
    margin: 1rem 0rem 2rem;
    padding-left: 3rem;
}


/* filter 2*/
.filter-2-options {
    padding-right: 1rem;
    display: none;
}

.filter-2-options-search-box img {
    width: 20px;
}

.filter-2-options-container {
    margin: 1rem 0rem 2rem;
    padding-left: 3rem;
}

.filter-2-options-search-box {
    display: flex;
    align-items: center;
    padding-left: 0.5rem;
    border: 1px solid rgb(156, 156, 156);
    border-radius: 9px;
    height: 45px;
}

.filter-2-options-search-box img {
    width: 20px;
    height: 20px;
    cursor: pointer;
}

.filter-2-options-search-box input {
    width: 90%;
    border: none;
    padding-left: 0.5rem;
    height: 40px;
    font-size: 1.15rem;
}

.filter-2-options-search-box input:focus {
    outline: none;
    border: none;
}
/* ... */

